Prevent resizing of product tiles after line wrap (Fixes harvestcloud/harvestcloud#8)

--- a/CoreBundle/Resources/public/css/tiles.css
+++ b/CoreBundle/Resources/public/css/tiles.css
@@ -22,7 +22,7 @@ div.tile.container .tile
     display: block;
     float: left;
     background-color: #fff;
-    min-height: 23em;
+    min-height: 28em;
     margin-top: 0;
     margin-bottom: 1.4em;
     margin-left: 0;
